@@ -109,6 +109,7 @@
 27) Add 802.11g/n mixed mode and set default<br>
 28) Add samba for smb and wins services<br>
 29) portforward and ipport filter scripts now reboot at start<br>
+30) Content filters based on webstr now works<br>
 <br><br>
 <b>For support see:</b><br>
 <a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
